test/files/neg/bug783.check
bug783.scala:12: error: type mismatch;
 found   : Contexts.this.Global#Template
 required: Contexts.this.global.Template
      globalInit0.Template(10, 20);
                          ^
one error found
